erDiagram
    ESTUDIANTE {
        int id_estudiante PK
        varchar nombres
        varchar apellidos
        varchar documento_identidad
        date fecha_nacimiento
        varchar tipo_documento
        varchar telefono
        varchar correo_electronico
        varchar direccion
        int id_municipio FK
    }
    
    DOCENTE {
        int id_docente PK
        varchar nombres
        varchar apellidos
        varchar documento_identidad
        varchar profesion
        varchar tipo_documento
        varchar telefono
        varchar correo_electronico
    }
    
    ASIGNATURA {
        int id_asignatura PK
        varchar nombre
        int intensidad_horaria
    }
    
    GRUPO {
        int id_grupo PK
        varchar nombre
        int id_grado FK
        int id_sede FK
        int id_jornada FK
    }
    
    CARGA_ACADEMICA {
        int id_carga PK
        int id_docente FK
        int id_grupo FK
        int id_asignatura FK
        int id_anio_lectivo FK
    }
    
    PERIODO {
        int id_periodo PK
        varchar nombre
        date fecha_inicio
        date fecha_fin
        int id_anio_lectivo FK
    }
    
    EVALUACION {
        int id_evaluacion PK
        int id_carga_academica FK
        int id_periodo FK
        int id_tipo_evaluacion FK
        varchar nombre
        text descripcion
        date fecha_presentacion
        int id_logro FK
    }
    
    CALIFICACION {
        int id_calificacion PK
        int id_evaluacion FK
        int id_matricula FK
        numeric nota
        varchar observaciones
        timestamp fecha_calificacion
        int usuario_modificacion FK
        timestamp fecha_modificacion
    }
    
    MATRICULA {
        int id_matricula PK
        int id_estudiante FK
        int id_grupo FK
        date fecha_matricula
        varchar estado
        int id_anio_lectivo FK
    }
    
    ESTUDIANTE ||--o{ MATRICULA : "se matricula"
    GRUPO ||--o{ MATRICULA : "contiene"
    MATRICULA ||--o{ CALIFICACION : "recibe"
    
    DOCENTE ||--o{ CARGA_ACADEMICA : "asignado a"
    GRUPO ||--o{ CARGA_ACADEMICA : "tiene asignada"
    ASIGNATURA ||--o{ CARGA_ACADEMICA : "es parte de"
    
    CARGA_ACADEMICA ||--o{ EVALUACION : "programa"
    PERIODO ||--o{ EVALUACION : "corresponde a"
    
    EVALUACION ||--o{ CALIFICACION : "genera"
